base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  namespace: ingress-pool
spec:
  ports:
   - protocol: TCP
     port: 443
     targetPort: 80
